[package]
name = "tree-sitter-rsl"
description = "A parser for RSL, Rad Scripting Language."
version = "0.0.10"
authors = ["Alexander Terp <alexander.terp@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rsl"]
categories = ["parsing", "text-editors"]
repository = "http://github.com/amterp/tree-sitter-rsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
